@@ -12,6 +12,8 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Bug #1565514, SystemError not raised on too many nested blocks.
+
 - Bug #1576174: WindowsError now displays the windows error code
   again, no longer the posix error code.
 
